# megatron-memory-fragmentation

./: .gitignore  LICENSE  README.md  SUPPORTED_MEGATRON_VERSIONS.md  pyproject.toml
.github/workflows/: ci.yml
memory_fragmentation/: README.md  __init__.py  analyzer.py  cli.py  collector.py  dashboard.py  megatron_instrumentation_example.py  megatron_patch.py  phases.py
tests/: test_prototype.py
