[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "megatron-memory-fragmentation"
version = "0.1.0"
description = "GPU memory fragmentation tracing and replay for Megatron-LM training"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Guo Minkun", email = "gmk21@mails.tsinghua.edu.cn"},
]
keywords = ["cuda", "gpu-memory", "megatron-lm", "pytorch", "fragmentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/G-keng/megatron-memory-fragmentation#readme"
Issues = "https://github.com/G-keng/megatron-memory-fragmentation/issues"
Source = "https://github.com/G-keng/megatron-memory-fragmentation"

[project.scripts]
megatron-memfrag = "memory_fragmentation.cli:main"

[tool.setuptools]
include-package-data = false
packages = ["memory_fragmentation"]
